# conflict

./: LICENSE.md  README.md  meson.build  meson_options.txt
include/conflict/: choice.hpp  conflict.hpp  detail.hpp  error.hpp  info.hpp  option.hpp  parser.hpp  string.hpp
tests/: choice.cpp  example.cpp  meson.build  option.cpp  positional.cpp  string.cpp
